--- a/css/bio.css
+++ b/css/bio.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: var(--lighter-red);
+  background-color: var(--lightest-red);
   border: var(--red) solid 3rem;
 }
 
